# ImaginaCore

./: BasicPixelManager.cpp  CApi.cpp  CMakeLists.txt  Computation.cpp  Controller.cpp  Delegate.cpp  Evaluator.cpp  FractalContext.cpp  LocationManager.cpp  MultiPrecision.cpp  PixelManager.cpp  PixelProcessing.cpp  PlatformDependent.cpp  basic_pixel_manager.cpp  c_api.cpp  computation.cpp  controller.cpp  engine.cpp  evaluator.cpp  fractal_context.cpp  imp_lite.cpp  location_manager.cpp  module.cpp  multi-precision.cpp  multi_precision.cpp  pixel_management.cpp  pixel_management.i  pixel_manager.cpp  pixel_processing.cpp  platform_dependent.cpp  proxy.cpp
include/: BasicPixelManager.h  BasicTypes.h  Complex.h  Constants.h  Declarations.h  Evaluator.h  FractalContext.h  Imagina.h  PixelManager.h  Types.h
include/Imagina/: BasicPixelManager.h  BasicTypes.h  CApi.h  CTypes.h  Complex.h  Computation.h  Controller.h  Declarations.h  Delegate.h  Evaluator.h  FloatingPoint.h  FractalContext.h  ImMath.h  Imagina.h  LocationManager.h  MultiPrecision.h  OutputDescriptorHelper.h  PixelManager.h  PixelProcessing.h  PlatformDependent.h  Types.h  basic_pixel_manager  basic_types  c_api.h  complex  computation  constants  controller  declarations  declarations.h  delegate  engine  evaluator  evaluator.h  floating_point  floating_point.h  fractal_context  imagina  imagina.h  imp_lite  (+22 more)
include/Imagina/interfaces/: pixel_management
include/imagina/: basic_pixel_manager.h  basic_types.h  complex.h  complex_f64ei64.h  computation.h  constants.h  controller.h  declarations.h  engine.h  evaluator.h  float_f64ei64.h  floating_point.h  fractal_context.h  imagina.h  imp_lite.h  location_manager.h  math.h  module.h  module_extension.h  multi-precision.h  numerics.h  output_info_helper.h  pixel_data.h  pixel_management.h  pixel_processing.h  types.h  vector.h
interface/: CMakeLists.txt  controller.i  engine.i  evaluator.i  location_manager.i  main.cpp  pixel_management.i  task.i
interface_generator/: CMakeLists.txt  main.cpp
interfaces/: controller  controller.i  evaluator  evaluator.i  location_manager  location_manager.i  pixel_management  pixel_management.i  pixel_processing  pixel_processing.i
